<resources>
    <string name="app_name">Sooft Sales</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="base_url">Base Url</string>
    <string name="save">Save</string>
    <string name="enter_base_url_here">Enter Base Url Here</string>
    <string name="welcome">Welcome again !</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logging">LoggingIn...</string>
    <string name="ch_net_con">Check Network Connection</string>
    <string name="account_blocked">The main account is blocked</string>
    <string name="package_finished">Package is finished</string>
    <string name="domain_invalid">This domain is invalid</string>
    <string name="inv_cred">Invalid credentials</string>
    <string name="account_used">This Account Used By Another User</string>
    <string name="home">Home</string>
    <string name="sales_invoices">Sales Invoices</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="create_sale_invoice">Create Sale Invoice</string>
    <string name="create_return_invoice">Create Return Invoice</string>
    <string name="add_product">Add Product</string>
    <string name="sync_data">Sync Data</string>
    <string name="categories">Categories</string>
    <string name="downloading">Downloading...</string>
    <string name="dismiss">dismiss</string>
    <string name="products">Products</string>
    <string name="synchronization_in_progress">Synchronization in progress...</string>
    <string name="you_can_wait_till_synchronization_n_or_n">You can wait till synchronization \n or \n</string>
    <string name="background">background</string>
    <string name="pro_ar_name">Product Arabic Name</string>
    <string name="write_here">Write here</string>
    <string name="pro_en_name">Product English Name</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="pro_photo">Product Photo</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_photo">Choose photo</string>
    <string name="invoices">Invoices</string>
    <string name="uploading">Uploading...</string>
    <string name="done">Done</string>
    <string name="customer_name">Customer Name</string>
    <string name="sar">SAR</string>
    <string name="the_price_is_including_tax">The price is including tax :</string>
    <string name="the_price_isnot_including_tax">The price isn\'t including tax :</string>
    <string name="create">Create</string>
    <string name="add_discount">Add Discount</string>
    <string name="confirm">Confirm</string>
    <string name="hint_price">0.00</string>
    <string name="item_price_greater_zero">Product price must be greater than zero</string>
    <string name="enter_item_price">Enter product price</string>
    <string name="pricing_details">Pricing Details</string>
    <string name="totqty">TotQty :</string>
    <string name="discount_value">Discount Value :</string>
    <string name="tot_vat">Total + VAT</string>
    <string name="pay">Pay</string>
    <string name="item">Item</string>
    <string name="total_without_vat">Total without VAT</string>
    <string name="vat">Vat</string>
    <string name="total_vat_dis">Total+VAT+Dis</string>
    <string name="cash">Cash</string>
    <string name="mada">Mada</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="error">Error</string>
    <string name="total">Total</string>
    <string name="dis_less">Discount must be less than total</string>
    <string name="ch_language">Change Language</string>

    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>
    <string name="toast_10">Please set the printer as black label mode!</string>
    <string name="toast_11">Settings->System->Advanced->InnerPrinter-> set black mark function</string>
    <string name="toast_12">Please set the printer to label mode!</string>
    <string name="align_form">Align form</string>
    <string name="align_left">Align left</string>
    <string name="align_mid">middle</string>
    <string name="align_right">right</string>
    <string name="pic_pos">Picture position</string>
    <string name="pic_hor">transverse</string>
    <string name="pic_ver">vertical</string>

    <string name="pic_mode">picture printing method</string>
    <string name="pic_mode1">raster bitmap</string>
    <string name="pic_mode2">8 point single density</string>
    <string name="pic_mode3">8 point double density</string>
    <string name="pic_mode4">24 point single density</string>
    <string name="pic_mode5">24 point double density</string>
    <string name="code">Code</string>
    <string name="date">Date</string>
    <string name="print">Print</string>
    <string name="upload">Upload</string>


    <string name="pr_address">ADDRESS /</string>
    <string name="pr_receipt_No">Receipt NO/</string>
    <string name="pr_receipt">Date/</string>
    <string name="pr_tax_no">TAX NO/</string>
    <string name="pr_cust_name">Customer/</string>
    <string name="pr_pay">Payment/</string>
    <string name="pr_tax">TAX/</string>
    <string name="pr_dis">Discount/</string>
    <string name="pr_total_before_tax_disc">Total Before TAX-Discount/</string>
    <string name="pr_total_tax_dis">Total+TAX+Discount/</string>
    <string name="simple_sales_receipt">Simplified Tax Receipt</string>
    <string name="simple_tax_return_invoice">Simplified Tax  Receipt</string>
    <string name="final_tot">Total/</string>
    <string name="pr_item">Item</string>
    <string name="total_before_discount">Total before discount</string>
    <string name="total_with_vat">Total With VAT</string>
    <string name="check_network">Check network connection</string>
    <string name="default_customer">Default Customer</string>
    <string name="enter_the_invoice_number">Enter the Receipt number</string>
    <string name="refund">Refund</string>
    <string name="items">Items</string>
    <string name="amount">Amount</string>
    <string name="upload_products">Uploading products....</string>
    <string name="uploading_invoices">Uploading invoices...</string>
    <string name="downloading_products">Downloading Products...</string>
    <string name="downloading_categories">Downloading Categories...</string>
    <string name="downloading_user_data">Downloading user data...</string>
    <string name="un_uploaded">UnUploaded</string>
    <string name="wait">Wait...</string>
    <string name="all_invoices">All invoices</string>
    <string name="sync_invoices">Sync invoices</string>
    <string name="unsync_invoices">UnSync invoices</string>
    <string name="change_app_domain">Change App Domain</string>
    <string name="commercial_no">Commercial NO/</string>
    <string name="cr">CR/</string>


</resources>