<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".uis.activity_sales_invoices.SalesInvoicesActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/all_invoices"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/unSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/unsync_invoices"
                android:checked="true"
                android:fontFamily="@font/ar_font"
                />
            <RadioButton
                android:id="@+id/sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/sync_invoices"
                android:fontFamily="@font/ar_font"

                />

        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_top_primary"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/ar_font"
                android:text="@string/code"
                android:gravity="center"

                />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/ar_font"
                android:text="@string/total"
                android:gravity="center"

                />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/white"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/ar_font"
                android:text="@string/date"
                android:gravity="center"

                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_more"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
    </LinearLayout>

</layout>
