<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="discount"
            type="String" />
        <variable
            name="total"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cancel"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/error"
                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/imageClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_close2"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/total"
                android:fontFamily="@font/ar_font"

                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@{total}"
                />

            <androidx.legacy.widget.Space
                android:layout_width="5dp"
                android:layout_height="0dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/grey4"
                android:text="@string/sar"
                android:fontFamily="@font/ar_font"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/discount_value"
                android:fontFamily="@font/ar_font"

                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@{discount}"
                />

            <androidx.legacy.widget.Space
                android:layout_width="5dp"
                android:layout_height="0dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/grey4"
                android:text="@string/sar"
                android:fontFamily="@font/ar_font"

                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey1"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/cancel"
            android:text="@string/dis_less"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ar_font"

            />



    </LinearLayout>
</layout>